--- a/fleet.html
+++ b/fleet.html
@@ -60,7 +60,7 @@
                 Our Seven Vehicles of <span class="text-gold">Distinction</span>
             </h2>
             <p class="mt-4 text-xl text-gray-300 max-w-3xl mx-auto">
-                Discover our meticulously maintained fleet, where every vehicle is chosen for its **comfort, safety, and executive appeal**. Your luxury journey starts here.
+                Discover our meticulously maintained fleet, where every vehicle is chosen for its comfort, safety, and executive appeal. Your luxury journey starts here.
             </p>
         </div>
     </section>
@@ -228,7 +228,7 @@
         <h3 class="text-xs uppercase tracking-widest text-gray-500 font-bold">Executive Team Transport</h3>
         <h4 class="mt-2 text-4xl font-extrabold text-gold">Mercedes-Benz V-Class</h4>
         <p class="mt-4 text-gray-700 text-lg">
-            The standard for **VIP and corporate group transfers. Offering business-class seating, configurable leather interiors, and advanced climate control, the V-Class guarantees a comfortable and productive journey.
+            The standard for VIP and corporate group transfers. Offering business-class seating, configurable leather interiors, and advanced climate control, the V-Class guarantees a comfortable and productive journey.
         </p>
         <ul class="feature-list mt-8 text-gray-800 text-base">
             <li><i class="fa fa-users-line fa-lg"></i> Capacity: Up to 6-7 Passengers</li>
