--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 
     <div id="mobileNav" class="md:hidden hidden px-8 pb-4 bg-white shadow-inner">
       <a href="#services" class="block py-2 text-lg border-b border-gray-100">Services</a>
-      <a href="#fleet" class="block py-2 text-lg border-b border-gray-100">Our Fleet</a>
+      <a href="fleet.html" class="block py-2 text-lg border-b border-gray-100">Our Fleet</a>
       <a href="#quote" class="block py-2 text-lg border-b border-gray-100">Enquire</a>
       <a href="#contact" class="block py-2 text-lg">Contact</a>
     </div>
@@ -106,10 +106,10 @@
         <div class="w-full md:w-3/5 text-white">
           <p class="uppercase tracking-widest text-sm text-gold font-semibold mb-2">The Definition of Discretion</p>
           <h2 class="text-5xl md:text-7xl font-extrabold leading-tight tracking-tight">Seamless Executive Travel.</h2>
-          <p class="mt-6 text-xl text-gray-200 max-w-2xl">Lefika Elite provides **VIP airport transfers**, **discreet corporate shuttles**, and **private chauffeur services** with a focus on luxury, punctuality, and uncompromising safety.</p>
+          <p class="mt-6 text-xl text-gray-200 max-w-2xl">Lefika Elite provides VIP airport transfers, discreet corporate shuttles, and private chauffeur services with a focus on luxury, punctuality, and uncompromising safety.</p>
           <div class="mt-10 flex gap-6">
             <a href="#contact" class="px-8 py-4 bg-gold hover:bg-gold-dark rounded-xl text-white font-bold text-lg shadow-xl transition duration-300">Book Your Chauffeur</a>
-            <a href="#fleet" class="px-8 py-4 border border-white/50 rounded-xl text-white text-lg hover:bg-white/10 transition duration-300">View Our Fleet</a>
+            <a href="fleet.html" class="px-8 py-4 border border-white/50 rounded-xl text-white text-lg hover:bg-white/10 transition duration-300">View Our Fleet</a>
           </div>
 
           <div class="mt-10 grid grid-cols-2 lg:grid-cols-4 gap-4 max-w-3xl">
@@ -188,7 +188,7 @@
           <div class="p-8 rounded-2xl card-shadow border-t-4 border-gold">
             <i class="fa fa-plane fa-3x text-gold mb-4"></i>
             <h3 class="text-xl font-bold">VIP Airport Transfers</h3>
-            <p class="mt-3 text-gray-700">Private, swift, and discreet transfers to and from all major airports. **Meet & Greet service** and flight monitoring included as standard.</p>
+            <p class="mt-3 text-gray-700">Private, swift, and discreet transfers to and from all major airports. Meet & Greet service and flight monitoring included as standard.</p>
           </div>
           <div class="p-8 rounded-2xl card-shadow border-t-4 border-gold">
             <i class="fa fa-building fa-3x text-gold mb-4"></i>
@@ -303,7 +303,7 @@
 
           <div class="bg-gray-50 rounded-3xl p-8 card-shadow border-l-4 border-gold">
             <h4 class="font-bold text-xl">Our Elite Promise</h4>
-            <p class="text-base text-gray-700 mt-3">Every journey is managed with **utmost discretion** and a focus on your schedule. Immaculate, sanitized vehicles and professionally trained chauffeurs ensure a superior travel experience.</p>
+            <p class="text-base text-gray-700 mt-3">Every journey is managed with utmost discretion and a focus on your schedule. Immaculate, sanitized vehicles and professionally trained chauffeurs ensure a superior travel experience.</p>
           </div>
         </div>
       </div>
